--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 					<p class="xsmall left"><em>In this session we will talk about:</em></p>
 					<ol>
 						<li>The Dark Ages</li>
-						<li>Introduction to Peopleware</li>
-						<li>Self-organized teams</li>
-						<li>Multifunctional teams</li>
-						<li>Productivity & waste</li>
+						<li>Why Peopleware</li>
 						<li>Motivation</li>
+						<li>Multifunctional teams</li>
+						<li>Self-organized teams</li>
+						<li>Productivity & Waste</li>
 						<li>Improvement</li>
 					</ol>
 				</section>
@@ -178,11 +178,11 @@
 
 				<section>
 					<img src="assets/images/blank-2022545_960_720.png" alt="Doubt Girl" class="medium">
-					<p>Doesn't it sound great?</p>
+					<p class="italic">Doesn't it sound <strong>great</strong>?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 1</em>
+					<em>Chapter 2</em>
 					<h2>Why Peopleware</h2>
 					<p class="italic small">Make People Awesome</p>
 				</section>
@@ -272,12 +272,12 @@
 				</section>
 
 				<section>
-					<p>How do we Make People <strong class="featured italic">Awesome</strong>?</p>
+					<p class="italic">But... How do we Make People <strong class="featured italic">Awesome</strong>?</p>
 				</section>
 
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 5</em>
+					<em>Chapter 3</em>
 					<h2>Motivation</h2>
 					<p class="italic small">The Eye of the Tiger</p>
 				</section>
@@ -334,7 +334,7 @@
 					<p class="xsmall">Concerns about extrinsic motivation</p>
 					<p class="small">Soma Cube Experiment by Eduard Decí, 1969</p>
 					<table class="center">
-						<tr>
+						<tr class="small">
 							<th></th>
 							<th>Group A</th>
 							<th>Group B</th>
@@ -377,12 +377,12 @@
 				</section>
 
 				<section>
-					<p>Are we stronger together or alone?</p>
-					<p>How we create a good balanced team?</p>
+					<p class="italic">Are we stronger <strong>together</strong> or <strong>alone</strong>?</p>
+					<p class="italic">How we do create a the <strong class="featured">perfect team</strong>?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 3</em>
+					<em>Chapter 4</em>
 					<h2>Multifunctional teams</h2>
 					<p class="italic small">One for all and all for one</p>
 				</section>
@@ -397,11 +397,11 @@
 				</section>
 
 				<section>
-					<p class="italic">How do we select each member?</p>
+					<p class="italic">How do we <strong>select</strong> each member?</p>
 				</section>
 
 				<section>
-					<h3>The FullStack Developer</h3>
+					<h3>The FullStack Approach</h3>
 					<p class="italic">
 						<span class="fragment">Management</span>
 						<span class="fragment">, Testing</span>
@@ -525,8 +525,8 @@
 				</section>
 
 				<section>
-					<p class="italic">Great, I've selected the right people</p>
-					<p class="italic xbig fragment">Do I have a team now?</p>
+					<p class="italic">Great, I've selected the <strong>right people</strong></p>
+					<p class="italic xbig fragment">Do I have a <strong class="featured">team</strong> now?</p>
 				</section>
 
 				<section>
@@ -571,12 +571,12 @@
 				</section>
 
 				<section>
-					<p class="italic">It still looks like some pyramidal</p>
-					<p class="italic xbig fragment">What can we do?</p>
+					<p class="italic">It looks like someone will always <strong>manage</strong> them</p>
+					<p class="italic xbig fragment">What should I do?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 2</em>
+					<em>Chapter 5</em>
 					<h2>Self-organized teams</h2>
 					<p class="italic small">The default way of management in nature</p>
 				</section>
@@ -619,8 +619,8 @@
 				<section>
 					<h3>Leadership Models: Servant</h3>
 					<p class="italic">"Oh my lord, what do you need?"</p>
-					<p class="italic small">Powerless</p>
-					<img src="assets/images/servant.png" alt="Servant" class="large">
+					<p class="italic small ">Powerless</p>
+					<img src="assets/images/servant.png" alt="Servant" class="large circle">
 				</section>
 
 				<section>
@@ -637,7 +637,7 @@
 				<section>
 					<h3>The Delegation Board</h3>
 					<p  class="xxsmall">(simetric)</p>
-					<img src="assets/images/delegation-board.jpg" class="medium left-30">
+					<img src="assets/images/delegation-board.jpg" class="medium left-30 ">
 					<table class="xsmall">
 						<tr>
 							<th></th>
@@ -701,11 +701,11 @@
 
 				<section>
 					<p class="italic">The Team is ready, How can I measure its <strong>productivity</strong>?</p>
-					<p class="fragment">...in order to help them</p>
+					<p class="italic fragment">OK! ...in order to help them</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 4</em>
+					<em>Chapter 6</em>
 					<h2>Productivity & Waste</h2>
 					<p class="italic small">More hours ≠ more work done</p>
 				</section>
@@ -717,6 +717,7 @@
 
 				<section>
 					<p class="italic">Increasing productivity by <strong class="featured">removing Waste</strong></p>
+					<p class="italic small">- Examples -</p>
 				</section>
 
 				<section>
@@ -769,23 +770,24 @@
 				</section>
 
 				<section>
-					<h3>Productivity Actions</h3>
+					<p class="italic">Increasing productivity by <strong class="featured">team actions</strong></p>
+					<p class="italic small">- Examples -</p>
 				</section>
 
 				<section>
-					<h3>Team Productivity: Swarming</h3>
+					<h3>Swarming</h3>
 					<p class="small">One piece continuous flow.</p>
 					<p class="xxsmall">Kanban: WIP (work in progress) limit.</p>
 					<img src="assets/images/kanban-board.png" alt="Kanban board" class="large">
 				</section>
 
 				<section>
-					<h3>Team Productivity: King & Servants (Swarming)</h3>
-					<p class="xsmall">(Kinberg, 2007)</p>
+					<h3>King & Servants</h3>
+					<p class="xsmall">(Kinberg, 2007) - Swarming applied</p>
 
 					<img src="assets/images/crown.png" alt="Crown" class="small margin-none">
 
-					<ul class="xsmall right-70">
+					<ul class="xsmall right-70 margin-bottom-5">
 						<li>Anyone working on the <strong>top priority</strong> story is <strong>King</strong>.</li>
 						<li><strong>Everyone else</strong> on the team is a <strong>Servant</strong>.</li>
 						<li>You want to be King. Try to find ways to help out with the top priority story.</li>
@@ -797,7 +799,7 @@
 				</section>
 
 				<section>
-					<h3>Team Productivity: TimeBoxing</h3>
+					<h3>Practice TimeBoxing</h3>
 					<ul>
 						<li>Meetings</li>
 						<li>User Stories / Tasks</li>
@@ -805,21 +807,32 @@
 				</section>
 
 				<section>
-					<h3>Self Productivity: Pomodoro Technique</h3>
-					<p class="italic small">(Francesco Cirillo, 1980s) </p>
-					<img src="assets/images/pomodoro.jpg" alt="Pomodoro" class="small margin-none">
-					<p class="small">Work per intervals of <strong>25 minutes</strong> (focused) + 5 min relax</p>
+					<p class="italic">Increasing productivity by <strong class="featured">individual actions</strong></p>
+					<p class="italic small">- Examples -</p>
 				</section>
 
 				<section>
-					<h3>Self Productivity: Gettings Things Done (GTD)</h3>
-					<p class="italic small">(David Allen, 2001)</p>
-					<img src="assets/images/gtd.jpg" alt="GTD" class="large margin-none">
+					<h3>Pomodoro Technique</h3>
+					<p class="italic small">(Francesco Cirillo, 1980s) </p>
+					<img src="assets/images/pomodoro.jpg" alt="Pomodoro" class="small margin-none">
+					<p class="small">Work per intervals of <strong>25 minutes</strong> (focused) + 5 min <u>relax</u></p>
+				</section>
 
+				<section>
+					<h3>Gettings Things Done (GTD)</h3>
+					<p class="italic xsmall">(David Allen, 2001)</p>
+					<img src="assets/images/gtd.jpg" alt="GTD" class="large margin-none">
+				</section>
+
+				<section>
+					<img src="assets/images/animal-2029676_960_720.png" alt="Sleep" class="small">
+					<p class="italic">So... we have the team <strong class="featured">motivated</strong>, <strong class="featured">balanced</strong> & <strong class="featured">self-organized</strong>.</p>
+					<p class="italic"> Can I go to sleep? </p>
+					<p class="fragment">Nope!</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 6</em>
+					<em>Chapter 7</em>
 					<h2>Improvement</h2>
 					<p class="small italic">Kaizen (改善) - change for better</p>
 				</section>
@@ -831,8 +844,9 @@
 				</section>
 
 				<section>
-					<h3>Safe Environment for Failure</h3>
+					<h3>Promote a Safe Environment for Failure</h3>
 					<p>Company Culture, CI Tools</p>
+					<img src="assets/images/tech_safety.png" alt="Stop" class="large">
 				</section>
 
 				<section>
@@ -846,7 +860,8 @@
 				</section>
 
 				<section>
-					<h3>Niko-Niko Calendar</h3>
+					<h3>Ask the Team</h3>
+					<p class="italic">Niko-Niko Calendar (async)</p>
 					<div class="">
 						 <img src="assets/images/nikoniko.png" alt="Faces" class="large margin-none">
 					</div>
@@ -856,21 +871,21 @@
 
 				<section>
 					<h3>Ask the Team</h3>
-					<p class="italic">One 2 One Meetings</p>
-					<ul class="xsmall none">
+					<p class="italic">One 2 One Meetings (sync)</p>
+					<ul class="small none">
 						<li><strong class="featured">OPEN</strong> - What's on your mind?</li>
 						<li><strong class="featured">SELF ESTEEM</strong> - What is your biggest accomplishment this month?</li>
 						<li><strong class="featured">CHALLENGE</strong> - What’s your biggest challenge right now?</li>
 						<li><strong class="featured">FOCUS</strong> - What do you want?</li>
-						<li><strong class="featured">IMPROVE</strong> - What things should we do differently? What processes can we improve?</li>
+						<li><strong class="featured">IMPROVE</strong> - What things/processes should we do differently?</li>
 						<li><strong class="featured">RESOURCES</strong> - What resources would be helpful to you right now?</li>
 						<li><strong class="featured">HELP</strong> - Is there anything I can help you with?</li>
 					</ul>
 				</section>
 
 				<section>
-					<h3>Team Identity</h3>
-					<div><img src="assets/images/team.png" alt="Team" class="medium margin-none"></div>
+					<h3>Identity</h3>
+					<div><img src="assets/images/team.png" alt="Team" class="small margin-none"></div>
 					<p class="small">Team Name (not team project name)</p>
 					<ul class="small">
 						<li>What make us <strong>special</strong>?</li>
@@ -880,25 +895,28 @@
 				</section>
 
 				<section>
-					<h3>Team Gamification</h3>
+					<h3>Have Fun!</h3>
+					<p class="small">Implement your own <strong>Gamification</strong> strategies.</p>
+					<p class="xsmall">And avoid leaderboards, rankings and badges.</p>
 					<p class="small italic">Our team fight against Zombies, Orcs & Dragons</p>
 					<div><img src="assets/images/cerebro.png" alt="Zombies, Orcs & Dragons" class="xsmall margin-none"></div>
-					<div><img src="assets/images/dragon.jpg" alt="Dragon wall" class="large circle margin-none"></div>
+					<div><img src="assets/images/dragon.jpg" alt="Dragon wall" class="medium circle margin-none"></div>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
-					<em>Chapter 7</em>
+					<em>Chapter 8</em>
 					<h2>Conclusions</h2>
 				</section>
 
-				<section>
-					<ul class="center none small">
-						<li class="fragment">Think & Do</li>
-						<li class="fragment">People are <strong>not</strong> Interchangeable pieces</li>
-						<li class="fragment">Invest in a Healty/enjoyable environment</li>
-						<li class="fragment">Have rules at the start and <strong>later break them</strong> (adapt according to the team’s needs).</li>
-						<li class="fragment">Coach the team through the process</li>
-						<li class="fragment">Take risks & Evolve!</li>
+				<section data-background="assets/images/background-primary.png"  data-background-color="black">
+					<p>...</p>
+					<ul class="center none small margin-bottom-5">
+						<li class="fragment"><strong class="featured">Think</strong> & <strong class="featured">Do</strong></li>
+						<li class="fragment">People are <strong class="featured">not</strong> Interchangeable pieces</li>
+						<li class="fragment">Invest in a <strong class="featured">Healty/enjoyable</strong> environment</li>
+						<li class="fragment">Have rules at the start and <strong class="featured">later break them</strong> (adapt).</li>
+						<li class="fragment"><strong class="featured">Coach</strong> the team through the process</li>
+						<li class="fragment">Take <strong class="featured">risks</strong> & <strong class="featured">Evolve!</strong></li>
 					</ul>
 				</section>
 
@@ -909,8 +927,8 @@
 				<section data-background="assets/images/background-primary.png">
 					<h4>Thanks!!!</h4>
 					<div class="small white">@jltutor</div>
-					<div><img src="assets/images/metadrop-logo-white.svg" class="medium"></div>
-					<div><img src="assets/images/event-logo.png" class="medium"/></div>
+					<div><img src="assets/images/metadrop-logo-white.svg" class="xxsmall"></div>
+					<div><img src="assets/images/event-logo.png" class="xxsmall"/></div>
 				</section>
 
 				<!-- Rejected -->
