--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				</section>
 
 				<section>
-					<h3>What differentiate <strong class="featured">Great</strong> companies</h3>
+					<h3>What differentiates <strong class="featured">Great</strong> companies</h3>
 					<p class="xxsmall">(Collins, 2001)</p>
 
 					<p></p>
