--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 				<section>
 					<img src="assets/images/blank-2022545_960_720.png" alt="Doubt Girl" class="medium">
 					<p class="italic">Doesn't it sound <strong>great</strong>?</p>
+					<p class="fragment">Meh...</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
@@ -360,6 +361,7 @@
 				<section>
 					<h3>How should we reward?</h3>
 					<p class="xsmall">(Six Rules for Rewards - Jurgen Appelo, 2011)</p>
+					<img src="assets/images/book-management-3.0.jpg" alt="Management 3.0" class="medium left-30">
 					<ol class="small margin-bottom-5">
 						<li class="fragment"><strong>Don’t</strong> promise rewards <strong>in advance</strong></li>
 						<li class="fragment">Keep anticipated rewards <strong>small</strong></li>
@@ -372,8 +374,8 @@
 
 				<section>
 					<h3>Peer Rewards</h3>
-					<p class="italic">Kudo Box</p>
-					<img src="assets/images/kudobox.jpg" alt="Faces" class="large">
+					<p class="italic small">Example: Kudo Box</p>
+					<img src="assets/images/kudobox.jpg" alt="Faces" class="large circle">
 				</section>
 
 				<section>
@@ -571,8 +573,8 @@
 				</section>
 
 				<section>
-					<p class="italic">It looks like someone will always <strong>manage</strong> them</p>
-					<p class="italic xbig fragment">What should I do?</p>
+					<p class="italic">It looks like someone will always <strong>need to manage</strong> them</p>
+					<p class="italic xbig fragment">Am I right?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
