--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@
 				<section>
 					<h3>The Stages of Team Formation</h3>
 					<p class="xsmall">(Tuckman, 1965)</p>
-					<div class="">
-						<img src="assets/images/stairs.png" alt="Stairs" class="margin-none small">
-					</div>
+
+					<img src="assets/images/stairs.png" alt="Stairs" class="margin-none small left-30">
+
 					<table class="xsmall">
 						<tr class="small">
 							<th></th>
@@ -573,8 +573,8 @@
 				</section>
 
 				<section>
-					<p class="italic">It looks like someone will always <strong>need to manage</strong> them</p>
-					<p class="italic xbig fragment">Am I right?</p>
+					<p class="italic">It looks great! But...</p>
+					<p class="italic xbig fragment">Will they be able to <strong>manage</strong> themselves?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
@@ -608,89 +608,28 @@
 					<h3>Leadership Models: Classic</h3>
 					<p class="italic">"Follow my rules, I'm the one who thinks here!"</p>
 					<p class="italic small">Strict Control</p>
-					<img src="assets/images/boss.jpg" alt="boss">
-				</section>
-
-				<section>
-					<h3>Leadership Models: The Hero</h3>
-					<p class="italic">"Soon or later we will need me (I've ensured that)"</p>
-					<p class="italic small">Dependant teams</p>
-					<img src="assets/images/hero.jpg" alt="Heroe" class="large">
+					<img src="assets/images/pyramid-up.png" alt="pyramid" class="medium">
+					<img src="assets/images/boss.jpg" alt="boss" class="medium circle">
 				</section>
 
 				<section>
 					<h3>Leadership Models: Servant</h3>
 					<p class="italic">"Oh my lord, what do you need?"</p>
 					<p class="italic small ">Powerless</p>
-					<img src="assets/images/servant.png" alt="Servant" class="large circle">
+					<img src="assets/images/pyramid-down.png" alt="pyramid" class="medium">
+					<img src="assets/images/servant.png" alt="Servant" class="medium circle">
 				</section>
 
 				<section>
 					<h3>Leadership Models: Host & Guests</h3>
 					<p class="italic">"Enjoy, have fun, and <strong>take responsibility</strong>"</p>
 					<p class="italic small">Rules, Limits, Actions</p>
-					<img src="assets/images/party.jpg" alt="Party" class="large">
+					<img src="assets/images/team-circle.png" alt="Team Circle" class="medium">
+					<img src="assets/images/party.jpg" alt="Party" class="medium circle">
 				</section>
 
 				<section>
 					<p class="italic">Do I need to delegate <strong class="featured">everything</strong> to the team?</p>
-				</section>
-
-				<section>
-					<h3>The Delegation Board</h3>
-					<p  class="xxsmall">(simetric)</p>
-					<img src="assets/images/delegation-board.jpg" class="medium left-30 ">
-					<table class="xsmall">
-						<tr>
-							<th></th>
-							<th>Manager</th>
-							<th>Team</th>
-							<th>Action</th>
-						</tr>
-						<tr>
-							<td class="strong">Tell</td>
-							<td class="center xxbig">✖</td>
-							<td></td>
-							<td>no explanation</td>
-						</tr>
-						<tr>
-							<td class="strong">Sell</td>
-							<td class="center xxbig">✖</td>
-							<td></td>
-							<td>try to convince</td>
-						</tr>
-						<tr>
-							<td class="strong">Consult</td>
-							<td class="center xxbig">✖</td>
-							<td></td>
-							<td>ask first</td>
-						</tr>
-						<tr style="background:#CCC">
-							<td class="strong featured">Agree</td>
-							<td class="center xxbig featured">✖</td>
-							<td class="center xxbig featured">✖</td>
-							<td class="featured">accord</td>
-						</tr>
-						<tr>
-							<td class="strong">Advise</td>
-							<td></td>
-							<td class="center xxbig">✖</td>
-							<td>ask first</td>
-						</tr>
-						<tr>
-							<td class="strong">Inquire</td>
-							<td></td>
-							<td class="center xxbig">✖</td>
-							<td>try to convince</td>
-						</tr>
-						<tr>
-							<td class="strong">Delegate</th>
-							<td></td>
-							<td class="center xxbig">✖</td>
-							<td>no explanation</td>
-						</tr>
-					</table>
-
 				</section>
 
 				<section>
@@ -700,6 +639,69 @@
 					<img src="assets/images/spotify-alignment.png" class="large">
 					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
+
+				<section>
+					<h3>The Delegation Board</h3>
+					<p  class="xxsmall">(simetric)</p>
+
+
+					<table class="xsmall center">
+						<tr>
+							<th colspan="3">Manager decisions</th>
+							<th>=</th>
+							<th colspan="3">Team decisions</th>
+						</tr>
+						<tr class="small strong">
+							<td style="background:#00CED1">⮜⮜⮜ Tell</td>
+							<td style="background:#00FFFF">⮜⮜ Sell</td>
+							<td style="background:#E0FFFF">⮜ Consult</td>
+							<td>Agree</td>
+							<td style="background:#E0FFFF">Advise ⮞</td>
+							<td style="background:#00FFFF">Inquire ⮞⮞</td>
+							<td style="background:#00CED1">Delegate ⮞⮞⮞</td>
+						</tr>
+						<tr class="small">
+							<td style="background:#00CED1">No explanation</td>
+							<td style="background:#00FFFF">Try to convince</td>
+							<td style="background:#E0FFFF">Ask first</td>
+							<td>Accord</td>
+							<td style="background:#E0FFFF">Try to convince</td>
+							<td style="background:#00FFFF">Ask first</td>
+							<td style="background:#00CED1">No explanation</td>
+						</tr>
+					</table>
+					<p class="small">Examples</p>
+
+					<table class="xsmall">
+						<tr>
+							<td>Hire new member</td>
+							<td>Consult</td>
+						</tr>
+						<tr>
+							<td>IDE</td>
+							<td>Delegate</td>
+						</tr>
+						<tr>
+							<td>Project Tracking Software</td>
+							<td>Agree</td>
+						</tr>
+						<tr>
+							<td>Workflow</td>
+							<td>Inquire</td>
+						</tr>
+						<tr>
+							<td>Backup policy</td>
+							<td>Advise</td>
+						</tr>
+						<tr>
+							<td>...</td>
+							<td>...</td>
+						</tr>
+					</table>
+
+
+				</section>
+
 
 				<section>
 					<p class="italic">The Team is ready, How can I measure its <strong>productivity</strong>?</p>
@@ -888,7 +890,7 @@
 				<section>
 					<h3>Identity</h3>
 					<div><img src="assets/images/team.png" alt="Team" class="small margin-none"></div>
-					<p class="small">Team Name (not team project name)</p>
+					<p class="small">Team Name ≠ project name</p>
 					<ul class="small">
 						<li>What make us <strong>special</strong>?</li>
 						<li>What do we want to <strong>remember</strong>?</li>
@@ -931,128 +933,6 @@
 					<div class="small white">@jltutor</div>
 					<div><img src="assets/images/metadrop-logo-white.svg" class="xxsmall"></div>
 					<div><img src="assets/images/event-logo.png" class="xxsmall"/></div>
-				</section>
-
-				<!-- Rejected -->
-				<section>
-					<h3>Manifesto for Agile Software Development</h3>
-					<p class="italic xxsmall">On February 11-13, <strong>2001</strong>, at The Lodge at Snowbird ski resort in the Wasatch mountains of Utah, seventeen people met to talk, ski, relax, and try to find common ground...</p>
-					<ul class="xsmall none center">
-						<li class="fragment"><strong class="featured">Individuals and interactions</strong> over <em>processes and tools</em></li>
-						<li class="fragment"><strong class="featured">Working software</strong> over <em>comprehensive documentation</em></li>
-						<li class="fragment"><strong class="featured">Customer collaboration</strong> over <em>contract negotiation</em></li>
-						<li class="fragment"><strong class="featured">Responding to change</strong> over <em>following a plan</em></li>
-					</ul>
-
-				</section>
-
-				<section>
-					<h4>12 Principles of Agile Software Development</h4>
-					<ul class="xxsmall none center">
-						<li class="fragment">Our highest priority is to <strong class="xbig">satisfy the customer</strong> through early and continuous delivery of <strong class="xbig">valuable software</strong>.</li>
-						<li class="fragment">Welcome <strong class="xbig">changing requirements</strong>, even late in	development. Agile processes harness change for the customer's <strong class="xbig">competitive advantage</strong>.</li>
-
-						<li class="fragment"><strong class="xbig">Deliver</strong> working software <strong class="xbig">frequently</strong>, from a
-						couple of weeks to a couple of months, with a
-						preference to the shorter timescale.</li>
-
-						<li class="fragment">Business people and developers must <strong class="xbig">work
-						together</strong> daily throughout the project.</li>
-
-						<li class="fragment">Build projects around <strong class="xxbig featured">motivated individuals</strong>.
-						Give them the <strong class="xbig">environment and support</strong> they need,
-						and trust them to get the job done.</li>
-
-						<li class="fragment">The most efficient and effective method of
-						conveying information to and within a development
-						team is <strong class="xbig">face-to-face conversation</strong>.</li>
-
-						<li class="fragment"><strong class="xbig">Working software</strong> is the primary <strong class="xbig">measure of progress</strong>.</li>
-
-						<li class="fragment">Agile processes promote <strong class="xbig">sustainable development</strong>.
-						The sponsors, developers, and users should be able
-						to maintain a constant pace indefinitely.</li>
-
-						<li class="fragment">Continuous attention to technical excellence
-						and <strong class="xbig">good design enhances agility</strong>.</li>
-
-						<li class="fragment"><strong class="xbig">Simplicity</strong> --the art of maximizing the amount
-						of work not done-- is essential.</li>
-
-						<li class="fragment">The best architectures, requirements, and designs
-						emerge from <strong class="xxbig featured">self-organizing teams</strong>.</li>
-
-						<li class="fragment">At regular intervals, the team reflects on how
-						to <strong class="xbig">become more effective</strong>, then tunes and adjusts
-						its behavior accordingly.</li>
-					</ul>
-
-				</section>
-
-				<section>
-					<h3>What motivates you?</h3>
-					<ul class="small none">
-						<li>Knowledge</li>
-						<li>Freedom</li>
-						<li>Honor</li>
-						<li>Status</li>
-						<li>Relationships</li>
-						<li>Order</li>
-						<li>Objetive</li>
-					</ul>
-				</section>
-
-				<section>
-					<h3>Why do people stay together?</h3>
-					<p class="xxsmall"> Tribal Leadership - (Logan, King & Fischer-Wright, 2008)</p>
-					<img src="assets/images/book-tribal-leadership.jpg" class="small left-30">
-					<table class="xsmall">
-						<tr class="small">
-							<th>Stage</th>
-							<th>Mood</th>
-							<th>Theme</th>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
-							<td>Life sucks</td>
-						</tr>
-						<tr>
-							<td>2</td>
-							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
-							<td>My Life sucks</td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
-							<td>I'm great (and you're not!)</td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
-							<td>We'are great (and they're not!)</td>
-						</tr>
-						<tr>
-							<td>5</td>
-							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
-							<td>Life is great</td>
-						</tr>
-					</table>
-				</section>
-
-				<section>
-					<h3>Scrum teams (Squads)</h3>
-					<p class="xxsmall">(Spotify Agile model)</p>
-					<p class="xsmall">They have <strong>end-to-end responsibilities</strong> and they work together towards their <strong>long-term mission</strong></p>
-					<img src="assets/images/spotify-squads.png" alt="Spotify Squads" class="large margin-none">
-					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
-				</section>
-
-				<section>
-					<h3>Little or no standardisation of processes</h3>
-					<p class="xsmall">Don’t have a formal standard, <strong>cross-pollination</strong> is better than standardization</p>
-					<img src="assets/images/spotify-tribe.png" alt="Spotify Squads" class="large margin-none">
-					<p class="italic xxsmall"><a href="https://blog.praveen.science/my-experience-on-spotify-agile-methodology/#ourstack">Praveen Kumar Purushothaman - My Experience on Spotify Agile Methodology</a></p>
 				</section>
 
 			</div>
