--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
 
 				<section>
 					<h3>Limit team size</h3>
-					<p class="small">Comunication can be an issue</p>
+					<p class="small">Communication can be an issue</p>
 					<div class="">
 						<img src="assets/images/lines-of-communication-brooks.png" class="large">
 						<!-- http://leftfoot.com.au/blog/brooks-law-lines-of-communication-calculator-siri-shortcut -->
