--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
 				<section>
 					<h3>Departments</h3>
-					<p class="xsmall">Functional departments, especialization, Time & Planification (waterfall model)</p>
+					<p class="xsmall">Functional departments, specialization, Time & Planification (waterfall model)</p>
 					<img src="assets/images/departments.jpg" class="large margin-none" alt="Departments">
-					<p>Comunication issues</p>
+					<p>Communication issues</p>
 				</section>
 
 				<section>
@@ -172,7 +172,7 @@
 				<section>
 					<h3>The Process</h3>
 					<img src="assets/images/factory.png" alt="Factory" class="xsmall">
-					<p>Strict & Clear phases, Especialization, One Process</p>
+					<p>Strict & Clear phases, Specialization, One Process</p>
 					<p class="small">Requirements → Design → Build → Testing → Release</p>
 				</section>
 
