--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						</tr>
 						<tr>
 							<td>2</td>
-							<td>First <strong>Who</strong> a then <strong>What</strong></td>
+							<td>First <strong>Who</strong>, then <strong>What</strong></td>
 							<td>The Right People</td>
 						</tr>
 						<tr class="xsmall">
