--- a/index.html
+++ b/index.html
@@ -170,16 +170,8 @@
 				</section>
 
 				<section>
-					<h3>The Process</h3>
-					<img src="assets/images/factory.png" alt="Factory" class="xsmall">
-					<p>Strict & Clear phases, Specialization, One Process</p>
-					<p class="small">Requirements → Design → Build → Testing → Release</p>
-				</section>
-
-				<section>
 					<img src="assets/images/blank-2022545_960_720.png" alt="Doubt Girl" class="medium">
-					<p class="italic">Doesn't it sound <strong>great</strong>?</p>
-					<p class="fragment">Meh...</p>
+					<p class="">Meh...</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
@@ -206,30 +198,10 @@
 							<td>First <strong>Who</strong>, then <strong>What</strong></td>
 							<td>The Right People</td>
 						</tr>
-						<tr class="xsmall">
-							<td>3</td>
-							<td>Confront Grim Reality</td>
-							<td class="small">Recognize, Face it</td>
-						</tr>
-						<tr class="xsmall">
-							<td>4</td>
-							<td>Clear strategy</td>
-							<td class="small">Best Skills, Economy core, Passion</td>
-						</tr>
 						<tr>
 							<td>5</td>
 							<td>Discipline culture</td>
 							<td>Spirit, Innovation, Flexibility, Responsability.. </td>
-						</tr>
-						<tr class="xsmall">
-							<td>6</td>
-							<td>Technology accelerators</td>
-							<td class="small">Managed by strategy</td>
-						</tr>
-						<tr class="xsmall">
-							<td>7</td>
-							<td>Constancy</td>
-							<td class="small">Inertia</td>
 						</tr>
 					</table>
 				</section>
@@ -303,13 +275,7 @@
 				</section>
 
 				<section>
-					<h3>The Maslow Pyramid</h3>
-					<p class="xsmall">Salary → Environment → Relationships → Self-Esteem* → Reputation*...</p>
-					<p><img src="assets/images/maslow.jpg" alt="Maslow Pyramid" class="large"></p>
-				</section>
-
-				<section>
-					<h3>Why we do what we do?</h3>
+					<h3>What is motivation?</h3>
 					<table class="small cols-2">
 						<tr>
 							<th class="right">Extrinsic</th>
@@ -318,10 +284,6 @@
 						<tr class="fragment">
 							<td class="right"><strong class="featured">Punishment & Rewards</strong></td>
 							<td><strong class="featured">Mission Fulfillment</strong></td>
-						</tr>
-						<tr class="fragment">
-							<td class="right xsmall">The outcome that will result by doing the task</td>
-							<td class="xsmall">The interest and enjoyment in the task itself</td>
 						</tr>
 						<tr class="fragment">
 							<td class="right italic">Promotions, Pay raises, Bonuses, Benefits, Prizes, Winning, Perks</td>
@@ -392,10 +354,8 @@
 				<section>
 					<h3>Why work as a Team</h3>
 					<img src="assets/images/ants.jpg" alt="gears" class="medium margin-none">
-					<p class="xsmall fragment">Adaptative <strong>Complex</strong> System compound by <strong class="featured">different agents</strong></p>
-					<p class="small fragment">Interacted, interconnected, organized (self)</p>
-					<p class="small fragment">Adapt, compete & colaborate: <strong>objetive</strong></p>
-					<p class="xsmall fragment">Sinergy, different visions (Planning Poker*)</p>
+					<p class="small">Interacted, interconnected, organized (self)</p>
+					<p class="small">Adapt, compete & colaborate: <strong>objetive</strong></p>
 				</section>
 
 				<section>
@@ -489,44 +449,6 @@
 				</section>
 
 				<section>
-					<h3>Multifunctional Radar</h3>
-					<canvas data-chart="radar">
-					<!--
-					{
-					 "data": {
-					  "labels": ["Management"," Testing"," DevOps"," Frontend"," Backend"," Site-Building"],
-					  "datasets": [
-					   {
-					    "data":[80,20,80,20,10,30],
-					    "label":"Daenerys","backgroundColor":"rgba(20,220,220,.6)"
-					   },
-					   {
-					    "data":[60,20,50,40,80,60],
-					    "label":"Jon Snow","backgroundColor":"rgba(220,220,20,.6)"
-					   }
-						 ,
-					   {
-					    "data":[40,40,40,90,90,40],
-					    "label":"Arya","backgroundColor":"rgba(20,120,120,.6)"
-						},
-						{
-						 "data":[98,70,60,10,20,60],
-						 "label":"Cersei","backgroundColor":"rgba(220,10,20,.6)"
-						}
-						,
-						{
-						 "data":[10,10,70,50,90,50],
-						 "label":"The Hound","backgroundColor":"rgba(20,10,20,.6)"
-						}
-					  ]
-					 },
-					 "options": { "responsive": "true" }
-					}
-					-->
-					</canvas>
-				</section>
-
-				<section>
 					<p class="italic">Great, I've selected the <strong>right people</strong></p>
 					<p class="italic xbig fragment">Do I have a <strong class="featured">team</strong> now?</p>
 				</section>
@@ -596,36 +518,7 @@
 				<section>
 					<h3>No Managers ≈ No testers</h3>
 					<p class="small">"But do we <strong>need managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>."</p>
-					<p class="xsmall">"It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
 					<p class="xxsmall right">Jurgen Appelo</p>
-				</section>
-
-				<section>
-					<h3>Leadership Models</h3>
-				</section>
-
-				<section>
-					<h3>Leadership Models: Classic</h3>
-					<p class="italic">"Follow my rules, I'm the one who thinks here!"</p>
-					<p class="italic small">Strict Control</p>
-					<img src="assets/images/pyramid-up.png" alt="pyramid" class="medium">
-					<img src="assets/images/boss.jpg" alt="boss" class="medium circle">
-				</section>
-
-				<section>
-					<h3>Leadership Models: Servant</h3>
-					<p class="italic">"Oh my lord, what do you need?"</p>
-					<p class="italic small ">Powerless</p>
-					<img src="assets/images/pyramid-down.png" alt="pyramid" class="medium">
-					<img src="assets/images/servant.png" alt="Servant" class="medium circle">
-				</section>
-
-				<section>
-					<h3>Leadership Models: Host & Guests</h3>
-					<p class="italic">"Enjoy, have fun, and <strong>take responsibility</strong>"</p>
-					<p class="italic small">Rules, Limits, Actions</p>
-					<img src="assets/images/team-circle.png" alt="Team Circle" class="medium">
-					<img src="assets/images/party.jpg" alt="Party" class="medium circle">
 				</section>
 
 				<section>
@@ -794,10 +687,8 @@
 					<ul class="xsmall right-70 margin-bottom-5">
 						<li>Anyone working on the <strong>top priority</strong> story is <strong>King</strong>.</li>
 						<li><strong>Everyone else</strong> on the team is a <strong>Servant</strong>.</li>
-						<li>You want to be King. Try to find ways to help out with the top priority story.</li>
 						<li>Whenever a King needs help, Servants <strong>immediately</strong> offer their services.</li>
 						<li>A Servant may <strong>not disrupt a King</strong>.</li>
-						<li>A Servant may never check in unreleasable code on the work branch. A King may check in whatever he pleases (as long as he doesn't violate a branch policy of course).</li>
 						<li>As soon as the top priority story <strong>is Done</strong>, anyone working on the <strong>next story</strong> is now King.</li>
 					</ul>
 				</section>
@@ -844,7 +735,7 @@
 				<section>
 					<img src="assets/images/comic-characters-2022709_960_720.png" alt="Stop" class="small">
 					<p class="italic">"If it works do not change it!"</p>
-					<p class="small fragment">someone will do it better soon or later... <div class="xsmall italic fragment">(.. and you will be off the market)</div></p>
+					<p class="small">someone will do it better soon or later... <div class="xsmall italic ">(.. and you will be off the market)</div></p>
 				</section>
 
 				<section>
